// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render when error is not null renders the error message 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "Error: ",
        "An error occurred",
      ],
    },
    "ref": null,
    "rendered": Array [
      "Error: ",
      "An error occurred",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Error: ",
          "An error occurred",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Error: ",
        "An error occurred",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App render when isLoaded is false renders the loading message 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Loading…",
    },
    "ref": null,
    "rendered": "Loading…",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Loading…",
      },
      "ref": null,
      "rendered": "Loading…",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App render when isLoaded is true renders the data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Header
          currentTemperature={17}
          description="Clear"
          icon="01n"
          location="Newcastle"
/>,
        <ol
          id="tabs"
>
          <li
                    className="tab"
          >
                    <a
                              href="#day-1"
                    >
                              Day 1
                    </a>
          </li>
          <li
                    className="tab"
          >
                    <a
                              href="#day-2"
                    >
                              Day 2
                    </a>
          </li>
          <li
                    className="tab"
          >
                    <a
                              href="#day-3"
                    >
                              Day 3
                    </a>
          </li>
          <li
                    className="tab"
          >
                    <a
                              href="#day-4"
                    >
                              Day 4
                    </a>
          </li>
          <li
                    className="tab"
          >
                    <a
                              href="#day-5"
                    >
                              Day 5
                    </a>
          </li>
</ol>,
        <ol
          id="tab-panels"
>
          <li
                    className="tab-panel"
                    id="day-1"
          >
                    <div>
                              Content Day 1
                    </div>
          </li>
          <li
                    className="tab-panel"
                    id="day-2"
          >
                    <div>
                              Content Day 2
                    </div>
          </li>
          <li
                    className="tab-panel"
                    id="day-3"
          >
                    <div>
                              Content Day 3
                    </div>
          </li>
          <li
                    className="tab-panel"
                    id="day-4"
          >
                    <div>
                              Content Day 4
                    </div>
          </li>
          <li
                    className="tab-panel"
                    id="day-5"
          >
                    <div>
                              Content Day 5
                    </div>
          </li>
</ol>,
      ],
      "className": "app",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "currentTemperature": 17,
          "description": "Clear",
          "icon": "01n",
          "location": "Newcastle",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="tab"
>
              <a
                            href="#day-1"
              >
                            Day 1
              </a>
</li>,
            <li
              className="tab"
>
              <a
                            href="#day-2"
              >
                            Day 2
              </a>
</li>,
            <li
              className="tab"
>
              <a
                            href="#day-3"
              >
                            Day 3
              </a>
</li>,
            <li
              className="tab"
>
              <a
                            href="#day-4"
              >
                            Day 4
              </a>
</li>,
            <li
              className="tab"
>
              <a
                            href="#day-5"
              >
                            Day 5
              </a>
</li>,
          ],
          "id": "tabs",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="#day-1"
>
                Day 1
</a>,
              "className": "tab",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Day 1",
                "href": "#day-1",
              },
              "ref": null,
              "rendered": "Day 1",
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="#day-2"
>
                Day 2
</a>,
              "className": "tab",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Day 2",
                "href": "#day-2",
              },
              "ref": null,
              "rendered": "Day 2",
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="#day-3"
>
                Day 3
</a>,
              "className": "tab",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Day 3",
                "href": "#day-3",
              },
              "ref": null,
              "rendered": "Day 3",
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="#day-4"
>
                Day 4
</a>,
              "className": "tab",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Day 4",
                "href": "#day-4",
              },
              "ref": null,
              "rendered": "Day 4",
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="#day-5"
>
                Day 5
</a>,
              "className": "tab",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Day 5",
                "href": "#day-5",
              },
              "ref": null,
              "rendered": "Day 5",
              "type": "a",
            },
            "type": "li",
          },
        ],
        "type": "ol",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="tab-panel"
              id="day-1"
>
              <div>
                            Content Day 1
              </div>
</li>,
            <li
              className="tab-panel"
              id="day-2"
>
              <div>
                            Content Day 2
              </div>
</li>,
            <li
              className="tab-panel"
              id="day-3"
>
              <div>
                            Content Day 3
              </div>
</li>,
            <li
              className="tab-panel"
              id="day-4"
>
              <div>
                            Content Day 4
              </div>
</li>,
            <li
              className="tab-panel"
              id="day-5"
>
              <div>
                            Content Day 5
              </div>
</li>,
          ],
          "id": "tab-panels",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                Content Day 1
</div>,
              "className": "tab-panel",
              "id": "day-1",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Content Day 1",
              },
              "ref": null,
              "rendered": "Content Day 1",
              "type": "div",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                Content Day 2
</div>,
              "className": "tab-panel",
              "id": "day-2",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Content Day 2",
              },
              "ref": null,
              "rendered": "Content Day 2",
              "type": "div",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                Content Day 3
</div>,
              "className": "tab-panel",
              "id": "day-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Content Day 3",
              },
              "ref": null,
              "rendered": "Content Day 3",
              "type": "div",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                Content Day 4
</div>,
              "className": "tab-panel",
              "id": "day-4",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Content Day 4",
              },
              "ref": null,
              "rendered": "Content Day 4",
              "type": "div",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                Content Day 5
</div>,
              "className": "tab-panel",
              "id": "day-5",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Content Day 5",
              },
              "ref": null,
              "rendered": "Content Day 5",
              "type": "div",
            },
            "type": "li",
          },
        ],
        "type": "ol",
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Header
            currentTemperature={17}
            description="Clear"
            icon="01n"
            location="Newcastle"
/>,
          <ol
            id="tabs"
>
            <li
                        className="tab"
            >
                        <a
                                    href="#day-1"
                        >
                                    Day 1
                        </a>
            </li>
            <li
                        className="tab"
            >
                        <a
                                    href="#day-2"
                        >
                                    Day 2
                        </a>
            </li>
            <li
                        className="tab"
            >
                        <a
                                    href="#day-3"
                        >
                                    Day 3
                        </a>
            </li>
            <li
                        className="tab"
            >
                        <a
                                    href="#day-4"
                        >
                                    Day 4
                        </a>
            </li>
            <li
                        className="tab"
            >
                        <a
                                    href="#day-5"
                        >
                                    Day 5
                        </a>
            </li>
</ol>,
          <ol
            id="tab-panels"
>
            <li
                        className="tab-panel"
                        id="day-1"
            >
                        <div>
                                    Content Day 1
                        </div>
            </li>
            <li
                        className="tab-panel"
                        id="day-2"
            >
                        <div>
                                    Content Day 2
                        </div>
            </li>
            <li
                        className="tab-panel"
                        id="day-3"
            >
                        <div>
                                    Content Day 3
                        </div>
            </li>
            <li
                        className="tab-panel"
                        id="day-4"
            >
                        <div>
                                    Content Day 4
                        </div>
            </li>
            <li
                        className="tab-panel"
                        id="day-5"
            >
                        <div>
                                    Content Day 5
                        </div>
            </li>
</ol>,
        ],
        "className": "app",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "currentTemperature": 17,
            "description": "Clear",
            "icon": "01n",
            "location": "Newcastle",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="tab"
>
                <a
                                href="#day-1"
                >
                                Day 1
                </a>
</li>,
              <li
                className="tab"
>
                <a
                                href="#day-2"
                >
                                Day 2
                </a>
</li>,
              <li
                className="tab"
>
                <a
                                href="#day-3"
                >
                                Day 3
                </a>
</li>,
              <li
                className="tab"
>
                <a
                                href="#day-4"
                >
                                Day 4
                </a>
</li>,
              <li
                className="tab"
>
                <a
                                href="#day-5"
                >
                                Day 5
                </a>
</li>,
            ],
            "id": "tabs",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="#day-1"
>
                  Day 1
</a>,
                "className": "tab",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Day 1",
                  "href": "#day-1",
                },
                "ref": null,
                "rendered": "Day 1",
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="#day-2"
>
                  Day 2
</a>,
                "className": "tab",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Day 2",
                  "href": "#day-2",
                },
                "ref": null,
                "rendered": "Day 2",
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="#day-3"
>
                  Day 3
</a>,
                "className": "tab",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Day 3",
                  "href": "#day-3",
                },
                "ref": null,
                "rendered": "Day 3",
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="#day-4"
>
                  Day 4
</a>,
                "className": "tab",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Day 4",
                  "href": "#day-4",
                },
                "ref": null,
                "rendered": "Day 4",
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="#day-5"
>
                  Day 5
</a>,
                "className": "tab",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Day 5",
                  "href": "#day-5",
                },
                "ref": null,
                "rendered": "Day 5",
                "type": "a",
              },
              "type": "li",
            },
          ],
          "type": "ol",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="tab-panel"
                id="day-1"
>
                <div>
                                Content Day 1
                </div>
</li>,
              <li
                className="tab-panel"
                id="day-2"
>
                <div>
                                Content Day 2
                </div>
</li>,
              <li
                className="tab-panel"
                id="day-3"
>
                <div>
                                Content Day 3
                </div>
</li>,
              <li
                className="tab-panel"
                id="day-4"
>
                <div>
                                Content Day 4
                </div>
</li>,
              <li
                className="tab-panel"
                id="day-5"
>
                <div>
                                Content Day 5
                </div>
</li>,
            ],
            "id": "tab-panels",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Content Day 1
</div>,
                "className": "tab-panel",
                "id": "day-1",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Content Day 1",
                },
                "ref": null,
                "rendered": "Content Day 1",
                "type": "div",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Content Day 2
</div>,
                "className": "tab-panel",
                "id": "day-2",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Content Day 2",
                },
                "ref": null,
                "rendered": "Content Day 2",
                "type": "div",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Content Day 3
</div>,
                "className": "tab-panel",
                "id": "day-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Content Day 3",
                },
                "ref": null,
                "rendered": "Content Day 3",
                "type": "div",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Content Day 4
</div>,
                "className": "tab-panel",
                "id": "day-4",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Content Day 4",
                },
                "ref": null,
                "rendered": "Content Day 4",
                "type": "div",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Content Day 5
</div>,
                "className": "tab-panel",
                "id": "day-5",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Content Day 5",
                },
                "ref": null,
                "rendered": "Content Day 5",
                "type": "div",
              },
              "type": "li",
            },
          ],
          "type": "ol",
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
